...
    
    @State private var inputText: String = ""
    
    var body: some View {
        HStack {
            TextField(
                "Type here to input text",
                text: $inputText,
                onCommit: { [self] in self.endEditing(from: self) }
            )
                .underline()
            
            NavigationLink(
                "Generate",
                destination: makeQRCodeImageView()
            )
                .padding(5)
                .border(color: .secondary, cornerRadius: 10, lineWidth: 1)
                .disabled(inputText.isEmpty)
        }
...
