...
                    <view key="view" opaque="NO" contentMode="scaleToFill" id="wbc-yd-nQP">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fAS-RN-oga">
                                <rect key="frame" x="0.0" y="108" width="414" height="414"/>
                                <accessibility key="accessibilityConfiguration" identifier="QR Image"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="fAS-RN-oga" secondAttribute="height" multiplier="1:1" id="WHt-py-gjQ"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.magnificationFilter" value="kCAFilterNearest"/>
                                </userDefinedRuntimeAttributes>
...
                                    <action selector="dismiss" destination="j1y-V4-xli" eventType="touchUpInside" id="QUr-Co-49c"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="1Xd-am-t49"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="Share View"/>
                        <constraints>
                            <constraint firstItem="fAS-RN-oga" firstAttribute="top" secondItem="e5H-m0-X8Y" secondAttribute="bottom" constant="20" id="5gG-hH-bFh"/>
                            <constraint firstItem="ECN-yN-efG" firstAttribute="centerX" secondItem="1Xd-am-t49" secondAttribute="centerX" id="6SX-xt-X0L"/>
                            <constraint firstItem="eab-F5-zBI" firstAttribute="centerX" secondItem="1Xd-am-t49" secondAttribute="centerX" id="7iJ-9Y-P3R"/>
                            <constraint firstItem="e5H-m0-X8Y" firstAttribute="top" secondItem="1Xd-am-t49" secondAttribute="top" constant="6" id="EE0-D5-mQh"/>
                            <constraint firstItem="fAS-RN-oga" firstAttribute="height" relation="lessThanOrEqual" secondItem="1Xd-am-t49" secondAttribute="height" id="JRo-IT-6jO"/>
...
