...
        }
    }

    var title: String {
        switch self {
        case .url:
            "URL"

        case .text:
            "Text"
        }
    }
}
...
